# nes_emulator

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  build.sh  build_docker.sh
.github/workflows/: build_and_test.yml
include/: cpu.hpp  log.hpp  memory.hpp  opcodes.hpp
src/: CMakeLists.txt  cpu.cpp  main.cpp  memory.cpp
tests/: CMakeLists.txt  test_cpu.cpp
